<resources>
    <string name="app_name">WhatView</string>
    <string name="btnLogIn">Log In</string>
    <string name="btnSignIn">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="facebook">Log in with Facebook</string>
    <string name="twitter">Log in with Twitter</string>
    <string name="gmail">Log in with Gmail</string>
    <string name="mainSignUp">Start using Whatview</string>
    <string name="email">Email</string>
    <string name="btnCreate">Create</string>
    <string name="pickActivityTittle">Before Start</string>
    <string name="pickActivitySubTittle">Pick your preferences</string>


    <string name="bad">Breaking Bad</string>
    <string name="gaki">gaki</string>
    <string name="got">Game Of Thrones</string>
    <string name="zombie">I Zombie</string>
    <string name="monk">Monk</string>
    <string name="narcos">Narcos</string>
    <string name="rick">Rick And Morty</string>
    <string name="twd">The WalKing Dead</string>
    <string name="sherloc">Sherlock</string>
    <string name="umr">UMR</string>
    <string name="serie11">Breaking Bad</string>
    <string name="serie12">Breaking Bad</string>


    <string name="breaking">When chemistry teacher Walter White is diagnosed with Stage III cancer and given only two years to live he decides he has nothing to lose. He lives with his teenage son, who has cerebral palsy, and his wife, in New Mexico. Determined to ensure that his family will have a secure future, Walt embarks on a career of drugs and crime. He proves to be remarkably proficient in this new world as he begins manufacturing and selling methamphetamine with one of his former students. The series tracks the impacts of a fatal diagnosis on a regular, hard working man, and explores how a fatal diagnosis affects his morality and transforms him into a major player of the drug trade</string>

    <string name="tsukai">Downtown no Gaki no Tsukai ya Arahende!! is a Japanese variety show which stars comedians Matsumoto Hitoshi, Hamada Masatoshi, Tsukitei (Yamazaki) Hōsei, Tanaka Naoki and Endō Shōzō. It is best known to western audiences for the annual No-Laughing Batsu Games and the original version of Silent Library.</string>
    <string name="game">Seven noble families fight for control of the mythical land of Westeros. Friction between the houses leads to full-scale war. All while a very ancient evil awakens in the farthest north. Amidst the war, a neglected military order of misfits, the Nights Watch, is all that stands between the realms of men and icy horrors beyond.</string>
    <string name="i">A med student-turned-zombie takes a job in the coroner’s office to gain access to the brains she must reluctantly eat to maintain her humanity, but with each brain she consumes, she inherits the corpse’s memories. With the help of her medical examiner boss and a police detective, she solves homicide cases in order to quiet the disturbing voices in her head. Based on the characters created by Chris Roberson and Michael Allred, and published by DC Comics’ Vertigo imprint.</string>
    <string name="mon">Monk is an Emmy Award winning television show about the private detective Adrian Monk (Tony Shalhoub) afflicted by Obsessive Compulsive Disorder (OCD) who also suffers from multiple phobias.</string>
    <string name="narc">Narcos chronicles the gripping real-life stories of the drug kingpins of the late 1980s and the corroborative efforts of law enforcement to meet them head on in brutal, bloody conflict. It details the conflicting forces - legal, political, police, military and civilian - that clash in an effort to control the worlds most powerful commodity: cocaine.</string>
    <string name="morty">Mad scientist Rick Sanchez moves in with his daughters family after disappearing for 20 years and involves them in his wacky adventures in this animated comedy.</string>
    <string name="walking">he Walking Dead tells the story of life following a zombie apocalypse. It follows a group of survivors, led by police officer Rick Grimes, traveling in search of a safe and secure home.</string>
    <string name="sher">Sherlock Holmes and Dr Watsons adventures in 21st Century London. A thrilling, funny, fast-paced contemporary remake of the Arthur Conan Doyle classic. Each season consists of 3 90 minute episodes.</string>
    <string name="umaru">People are not always who they appear to be, as is the case with Umaru Doma, the perfect high school girl—that is, until she gets home! Once the front door closes, the real fun begins. When she dons her hamster hoodie, she transforms from a refined, over-achieving student into a lazy, junk food-eating otaku, leaving all the housework to her responsible older brother Taihei. Whether shes hanging out with her friends Nana Ebina and Kirie Motoba, or competing with her self-proclaimed rival Sylphinford Tachibana, Umaru knows how to kick back and have some fun!</string>
    <string name="s1">The Big Bang Theory is a comedy series about four young scientists who know all about the world of physics, and one girl, who gives the physics world a real spin.</string>
    <string name="s2">The first season of the series, set in the 1980s, from brothers Matt and Ross Duffer, which is set to return for a second season in 2017, follows the disappearance of a young boy and the monstrous chain of events it launches in the small town.</string>

    <string name="s3">The Flash is an American television series developed by Greg Berlanti, Andrew Kreisberg and Geoff Johns, airing on The CW. It is based on the DC Comics character Barry Allen (Flash), a costumed superhero crime-fighter with the power to move at superhuman speeds. It is a spin-off from Arrow, existing in the same fictional universe. The series follows Allen, portrayed by Grant Gustin, a crime scene investigator who gains super-human speed, which he uses to fight criminals, including others who have also gained superhuman abilities.</string>







</resources>
