<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.izi.whatview.MainActivity"
    android:background="@drawable/background"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:gravity="center_horizontal"
        android:textSize="50dp"
        android:layout_marginTop="40dp"
        android:id="@+id/TitleApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#161616"
        android:text="@string/app_name"/>
    <EditText

        android:gravity="center_horizontal"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:id="@+id/etxUsername"
        android:layout_marginTop="58dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:maxLines="1"
        android:hint="@string/username"/>

    <EditText
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:id="@+id/etxPassword"
        android:gravity="center_horizontal"
        android:layout_below="@+id/etxUsername"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="70dp"
        android:maxLines="1"
        android:hint="@string/password"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="60dp"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvSignIn"
            android:text="@string/btnSignIn"
            android:layout_marginEnd="100dp"
            android:clickable="true"
            android:layout_centerVertical="true"
            android:layout_alignEnd="@+id/etxUsername"
            android:textSize="23dp"
            android:textColor="#f3f3f3"
            android:onClick="SingIn"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvLogIn"
            android:text="@string/btnLogIn"
            android:layout_marginStart="60dp"
            android:clickable="true"
            android:layout_alignTop="@+id/etxSignIn"
            android:layout_alignParentStart="true"
            android:textSize="23dp"
            android:textColor="#f3f3f3"
            android:onClick="LogIn"/>
    </LinearLayout>




    <Button
        android:layout_width="310dp"
        android:layout_height="34dp"
        android:text="@string/facebook"
        android:id="@+id/btnFacebook"
        android:layout_gravity="center_horizontal"
        android:background="#1572ff"
        android:textColor="#f3f3f3"
        android:layout_marginTop="50dp"
        android:textSize="15sp"
        />

    <Button
        android:layout_width="310dp"
        android:layout_height="34dp"
        android:text="@string/twitter"
        android:id="@+id/btnTwitter"
        android:layout_gravity="center_horizontal"
        android:background="#15e7ff"
        android:textColor="#f3f3f3"
        android:layout_marginTop="20dp"
         />

    <Button
        android:layout_width="310dp"
        android:layout_height="34dp"
        android:text="@string/gmail"
        android:id="@+id/btnGmail"
        android:layout_gravity="center_horizontal"
        android:background="#d34836"
        android:textColor="#ffffff"
        android:layout_marginTop="20dp" />


</LinearLayout>
