<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/background"
    tools:context="com.izi.whatview.SignUpActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainSignUp"
        android:layout_marginTop="20dp"
        android:textSize="30dp"
        android:textColor="#161616"
        android:id="@+id/tvMainSignUp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginTop="30dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:src="@drawable/pp"
            android:scaleType="centerCrop"
            android:alpha=".75"
            android:id="@+id/ImgPerfil" />
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/cam"
            android:scaleType="centerCrop"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:alpha=".75"
            android:layout_marginRight="5dp"/>
    </RelativeLayout>

    <EditText
        android:layout_marginTop="30dp"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:id="@+id/etxNewEmail"
        android:maxLines="1"
        android:hint="@string/email"/>
    <EditText
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:id="@+id/etxNewUsername"
        android:maxLines="1"
        android:hint="@string/username"/>
    <EditText
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:id="@+id/etxNewPassword"
        android:maxLines="1"
        android:hint="@string/password"
        />
    <Button
        android:layout_marginTop="80dp"
        android:layout_width="310dp"
        android:layout_height="34dp"
        android:id="@+id/btnCreate"
        android:text="@string/btnCreate"
        android:background="#7bee7b"
        android:textColor="#f3f3f3"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:onClick="CreateAccount"/>

</LinearLayout>
